force-app/main/default/objects/OAuthFlowDetails__c/OAuthFlowDetails__c.object-meta.xml
<CustomObject>
    <description>To store code_verifier, code_challenge, state etc for logged in user</description>
    <label>OAuthFlowDetails</label>
    <nameField>
        <displayFormat>OAuth-{00000}</displayFormat>
        <label>OAuthFlowDetails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuthFlowDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>