force-app/main/default/objects/OAuthFlowDetails__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <inlineHelpText>Stores the name of the web app like &apos;WebServerFlow&apos;, &apos;UserAgentFlow&apos;, &apos;WebServerFlowWithPKCE&apos;</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>