force-app/main/default/objects/OAuthFlowDetails__c/fields/Code_Verifier__c.field-meta.xml
<CustomField>
    <fullName>Code_Verifier__c</fullName>
    <label>Code Verifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>