force-app/main/default/objects/OAuthFlowDetails__c/fields/Expires_at_Time__c.field-meta.xml
<CustomField>
    <fullName>Expires_at_Time__c</fullName>
    <label>Expires at Time</label>
    <type>DateTime</type>
</CustomField>