force-app/main/default/objects/OAuthFlowDetails__c/fields/LinkedIn_User_Id__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User_Id__c</fullName>
    <description>This field returns in response when Access token is fetched and is mandatory to be passed when making subsequent calls for sharing post</description>
    <inlineHelpText>This field returns in response when Access token is fetched and is mandatory to be passed when making subsequent calls for sharing post</inlineHelpText>
    <label>LinkedIn User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>