force-app/main/default/objects/OAuthFlowDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>State__c</columns>
    <columns>Application__c</columns>
    <columns>Code_Challenge__c</columns>
    <columns>Code_Verifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>